<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7AD1FA"
    android:orientation="vertical"
    tools:context="scott.welsh.s300848432.WelshFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/scottbtnCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scottCapture" />

    <ImageView
        android:id="@+id/scottImageView_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/scottrdOneS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scott1S" />

            <RadioButton
                android:id="@+id/scottrdTwoS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scott2S" />

            <RadioButton
                android:id="@+id/scottrdThreeS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scott3S" />

            <RadioButton
                android:id="@+id/scottrdFourS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scott4S" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scottbtnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scottPlay" />

        <Button
            android:id="@+id/scottbtnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scottStop" />
    </LinearLayout>

</LinearLayout>