<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="scott.welsh.s300848432.ScottFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_scott" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="scott.welsh.s300848432.WelshFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_welsh" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="scott.welsh.s300848432.S300848432Fragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_s300848432" />
</navigation>